--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-social-icons": "^5.15.0"
+    "react-social-icons": "^5.15.0",
+    "tailwind-scrollbar": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
