--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^7.10.2",
