--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "framer-motion": "^7.10.2",
-    "next": "latest",
+    "next": "^13.1.1-canary.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-social-icons": "^5.15.0",
